styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter', sans-serif;
}

a {
    text-decoration: none;
    color: #243e63;
}

.nav__link:not(.nav__link--signup) a {
    position: relative;
    padding-bottom: 4px;
}

.nav__link:not(.nav__link--signup) a::after {
    position: absolute;
    bottom: 0;
    left: 0;
    content:"";
    width: 100%;
    height: 2px;
    background-color: #6428f5;
    transition: all 0.3s ease;
    opacity: 0;
}

.nav__link:not(.nav__link--signup) a:hover {
    color: #6428f5;
}

.nav__link:not(.nav__link--signup) a:hover::after {
    opacity: 1;
}

ul {
    list-style: none;
}

.row {
    max-width: 1200px;
    margin: 0 auto;
    width: 100%;
}

.container {
    padding: 96px 0;
    margin: 0 45px;
    line-height: 1.5;
}

.purple__text {
    color: #6428f5;
}

.section__header {
    font-size: 16px;
}

.section__title {
    color: #243e63;
}

.fade-in--left {
    opacity: 0;
    transform: translateX(-500px);
    transition: all 0.6s ease;
}

.fade-in--left.show {
    opacity: 1;
    transform: translateX(0);
}

.fade-in--right {
    opacity: 0;
    transform: translateX(500px);
    transition: all 0.6s ease;
}

.fade-in--right.show {
    opacity: 1;
    transform: translateX(0);
}


/* ANIMATIONS */

@keyframes fade-left {
    0% {
        opacity: 0;
        transform: translateX(-500px);
    }

    100% {
        opacity: 1;
        transform: translateX(0);
    }
}

@keyframes fade-right {
    0% {
        opacity: 0;
        transform: translateX(500px);
    }

    100% {
        opacity: 1;
        transform: translateX(0);
    }
}

@keyframes bounce {
    0% {
        transform: translateX(1200px);
    }

    70% {
        transform: translateX(-50px);
    }

    90% {
        transform: translateX(5px);
    }

    100% {
        transform: translateX(0);
    }
}


/* NAVBAR */

.menu__button {
    background-color: transparent;
    font-size: 40px;
    text-align: center;
    border: none;
    color: #7342d6;
    cursor: pointer;
}

.menu__backdrop {
    position: absolute;
    background-color: #fff;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 100;
    display: none;
    justify-content: center;
    align-items: center;
    height: 40vh;
    border: solid #e3e6e9 1px;
    margin-top: 24px;
    border-radius: 8px;
    animation: bounce .6s ease-in-out;
}

.menu--open .menu__backdrop {
    display: flex;
}

.menu__links {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 100%;
}

.menu__link {
    color: #242424;
    font-size: 18px;
    font-weight: 600;
}

.menu__list {
    padding: 20px;
}


.menu__button--close {
    position: absolute;
    right: 20px;
    top: 10px;
    padding: 8px;
    color: #242424;
    font-size: 24px;
}


.nav__row {
    max-width: 1200px;
    margin: 0 auto;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    text-align: center;
}

.nav__container {
    height: 80px;
    padding: 24px 24px;
}

.nav__brand {
    display: flex;
    align-items: center;
    gap: 12px;
}

.nav__logo {
    width: 45px;
    height: 45px;
}

.nav__link--list {
    display: flex;
    gap: 24px;
    align-items: center;
    font-weight: 500;
}

.nav__section__title {
    color: #243e63;
    transition: all 0.3s ease;
}

.nav__section__title:hover {
    color: #6428f5;
}

.nav__link--signup a {
    background-color: #6428f5;
    color: #fff !important;
    padding: 12px 32px;
    border-radius: 50px;
    font-size: .875rem;
    font-weight: 500;
    transition: all 0.3s ease;
}

.nav__link--signup a:hover {
    background-color: #451bbf;
}

.nav__link--signup a::after {
    display: none;
}

.login__signup {
    display: flex;
    gap: 12px;
    text-align: center;
    align-items: center;
    justify-content: center;
    margin: 0 24px 0 48px;
}

/* Landing */



#landing .container {
    padding: 96px 0;
}

.landing__img {
    width: 100%;
    height: 100%;
    padding-left: 32px;
}

.landing__img--wrapper {
    width: 100%;
    height: 100%;
}

.landing__description {
    width: 40%;
    display: flex;
    flex-direction: column;
    text-align: left;
} 

.section__title {
    font-size:48px;
}

.landing__content {
    display: flex;
    flex-direction: row-reverse;
}

.landing__text {
    margin: 32px 0;
    color: #243E63;
    width: 100%;
    font-size: 16px;
}

.input__field {
    padding: 20px 192px 20px 32px;
    border-radius: 50px;
    border: 2px solid #cbd5e0;
    font-size: 16px;
    width: 100%;
    transition: all 0.3s ease;
}

.input__field:hover {
    border-color: #a0aec0
}

.input__field::placeholder {
    color: #cbd5e0;
}

.input__wth--button {
    position: relative;
}

.input__button {
    background-color: #6428f5;
    color: #fff;
    padding: 12px 32px;
    border-radius: 50px;
    border: none;
    font-size: 16px;
    cursor: pointer;
    font-weight: 700;
    transition: all 0.3s ease;
    position: absolute;
    right: 0px;
    top: 0px;
    bottom: 0px;
    margin: 8px 8px 8px 0;
}

.input__button:hover {
    background-color: #451bbf;
}

.customers {
    margin-top: 80px;
}

.customers__text {
    font-size: 12px;
    color: #a0aec0;
    font-weight: 700;
}

.customers__img {
    width: 462px;
    height: 32px;
    opacity: 0.5;
    margin-top: 16px;
}

/* FEATURES */

#features .row {
    max-width: 1000px;

}

#features .container {
    padding: 96px 0;
    margin: 0 48px;
}

.features__description {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

#features h5 {
    margin-bottom: 16px;
    font-weight: 600;
    font-size: 16px;
}

#features h2 {
    margin-bottom: 16px;
    font-weight: 700;
    font-size: 48px;
    color: #243e63;
}
/* ... */

